Editing the content

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   </head>
   <body id="content" onload="">
     <h1 id="hello_world">Hello World</h1>
+    <p>Here is some text for the git change</p>
   </body>
 </html>
